--- a/stylesheet.css
+++ b/stylesheet.css
@@ -6,7 +6,7 @@ body {
 }
 
 
-/*can't make profile extend bottom */
+/*can't make profile extend bottom j */
 
 .profile {
     background-color: rgba(220,220,222, .8);
